// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionType Given connection_type is "cellular" should match snapshot 1`] = `
.c0 {
  background-color: #003725;
  box-shadow: 0 5px 25px 0 rgba(0,0,45,0.1),0 2px 6px 0 rgba(0,0,0,0.04), 0 16px 24px 0 rgba(0,0,46,0.06);
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 4px;
  padding: 8px;
  font-size: 0.75rem;
}

.c0 svg {
  fill: #ffffff;
}

<div
  class="c0"
  data-testid="connection_type-container"
  type="cellular"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-testid="icon-cellular"
    focusable="false"
    title="cellular"
    viewBox="0 0 24 24"
  >
    <path
      d="M17 4h3v16h-3zM5 14h3v6H5zm6-5h3v11h-3z"
    />
  </svg>
</div>
`;

exports[`ConnectionType Given connection_type is "ethernet" should match snapshot 1`] = `
.c0 {
  background-color: #0E074B;
  box-shadow: 0 5px 25px 0 rgba(0,0,45,0.1),0 2px 6px 0 rgba(0,0,0,0.04), 0 16px 24px 0 rgba(0,0,46,0.06);
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 4px;
  padding: 8px;
  font-size: 0.75rem;
}

.c0 svg {
  fill: #ffffff;
}

<div
  class="c0"
  data-testid="connection_type-container"
  type="ethernet"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-testid="icon-ethernet"
    focusable="false"
    title="ethernet"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.77 6.76L6.23 5.48.82 12l5.41 6.52 1.54-1.28L3.42 12l4.35-5.24zM7 13h2v-2H7v2zm10-2h-2v2h2v-2zm-6 2h2v-2h-2v2zm6.77-7.52l-1.54 1.28L20.58 12l-4.35 5.24 1.54 1.28L23.18 12l-5.41-6.52z"
    />
  </svg>
</div>
`;

exports[`ConnectionType Given connection_type is "wifi" should match snapshot 1`] = `
.c0 {
  background-color: #45327D;
  box-shadow: 0 5px 25px 0 rgba(0,0,45,0.1),0 2px 6px 0 rgba(0,0,0,0.04), 0 16px 24px 0 rgba(0,0,46,0.06);
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 4px;
  padding: 8px;
  font-size: 0.75rem;
}

.c0 svg {
  fill: #ffffff;
}

<div
  class="c0"
  data-testid="connection_type-container"
  type="wifi"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-testid="icon-wifi"
    focusable="false"
    title="wifi"
    viewBox="0 0 24 24"
  >
    <path
      d="M1 9l2 2c4.97-4.97 13.03-4.97 18 0l2-2C16.93 2.93 7.08 2.93 1 9zm8 8l3 3 3-3c-1.65-1.66-4.34-1.66-6 0zm-4-4l2 2c2.76-2.76 7.24-2.76 10 0l2-2C15.14 9.14 8.87 9.14 5 13z"
    />
  </svg>
</div>
`;
